--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     const { useState, useEffect } = React;
 
     const INITIAL_PLAYERS = [
-      'Player 1', 'Player 2', 'Player 3', 'Player 4', 
-      'Player 5', 'Player 6', 'Player 7', 'Player 8'
+      'Olivia', 'Gabi', 'Lily', 'Veronica', 
+      'Naomi', 'Paula', 'Kenzie', 'Scout'
     ];
 
     const MAX_PLAYERS = 15;
