--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
             </div>
 
             {/* Court Visualization */}
-            <div className="bg-gradient-to-b from-emerald-900/50 to-emerald-950/50 rounded-3xl p-4 sm:p-6 mb-4 sm:mb-6 border-4 border-white/20 relative overflow-hidden">
+            <div className="bg-gradient-to-b from-emerald-900/50 to-emerald-950/50 rounded-3xl p-4 sm:p-6 mb-4 sm:mb-6 border-4 border-white/20 relative mt-4">
               {/* Net line at top */}
               <div className="absolute left-0 right-0 top-0 h-1 bg-white/40 rounded-t-3xl" />
               <div className="absolute left-1/2 top-0 -translate-x-1/2 -translate-y-1/2 bg-slate-700 px-3 py-1 rounded-full text-white/70 text-xs font-bold z-10 border border-white/30">
