--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                           : 'bg-slate-700 text-slate-300 hover:bg-slate-600'
                       }`}
                     >
-                      Rot {gameNum}
+                      Rotation {gameNum}
                       {isSaved && !showUnsaved && (
                         <span className="absolute -top-1 -right-1 w-5 h-5 bg-green-400 rounded-full flex items-center justify-center text-xs text-slate-900">✓</span>
                       )}
@@ -763,7 +763,7 @@
               onClick={resetGame}
               className="w-full py-3 sm:py-4 rounded-xl bg-slate-700 text-slate-300 font-bold hover:bg-slate-600 transition-colors"
             >
-              ← Back to Setup / Switch Games
+              ← Back to Setup / Switch Rotations
             </button>
 
             {/* Legend */}
