--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                           <span className="absolute -top-1 -right-1 w-5 h-5 bg-yellow-400 rounded-full flex items-center justify-center text-xs text-slate-900">•</span>
                         )}
                       </button>
-                      {numRotationSlots > 1 && (
+                      {numRotationSlots > 1 && gameNum > 1 && (
                         <button
                           onClick={(e) => {
                             e.stopPropagation();
@@ -407,7 +407,7 @@
                               }
                             }
                           }}
-                          className="absolute -top-2 -left-2 w-5 h-5 bg-red-500 rounded-full flex items-center justify-center text-xs text-white hover:bg-red-600 transition-colors"
+                          className="absolute -bottom-1 -right-1 w-4 h-4 bg-slate-600 rounded-full flex items-center justify-center text-xs text-slate-400 hover:bg-red-500 hover:text-white transition-colors"
                         >
                           ×
                         </button>
